# marvin-recipes

./: .gitignore  .pre-commit-config.yaml  README.md  prefect.yaml  pyproject.toml
.github/workflows/: chroma.yml
.prefect/: flows.json
chroma/: chroma.sqlite3
chroma_data/: chroma.sqlite3
examples/: clustering.py
examples/deployments/: demo.py
examples/flows/: Dockerfile.digest  chroma_healthcheck.py  document_chunking.py  github_digest.py  on_event_body.py  prefectresults.py  refresh_vectorstore.py  watch_llm.py
examples/prefect_assistant/: llm_traceback.ipynb
examples/slackbot/: Dockerfile  chatbot.py  slackbot.py  start.py
examples/slackbot/_classify_question/: api.py  app.py  classify.py  requirements.txt
examples/slackbot/_classify_question/background/: concepts.json
examples/slackbot/classify_question/: Dockerfile.metrics  api.py  app.py  db.py  models.py
src/loaders/: base.py  openapi.py  web.py
src/marvin-recipes/loaders/: base.py  discourse.py  github.py  pdf.py
src/marvin_recipes/: documents.py  settings.py
src/marvin_recipes/loaders/: base.py  discourse.py  github.py  openapi.py  pdf.py  web.py
src/marvin_recipes/tools/: chroma.py
src/marvin_recipes/utilities/: collections.py  ids.py  slack.py  strings.py
src/marvin_recipes/vectorstores/: base.py  chroma.py
src/models/: documents.py
src/vectorstores/: chroma.py
