[project]
name = "marvin-recipes"
dynamic = ["version"]
description = "Building applications with Marvin."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "chatbot", "llm"]
requires-python = ">=3.9"
dependencies = [
    "marvin"
]

[project.optional-dependencies]
chroma = ["chromadb>=0.4.0"]
dev = [
    "marvin[dev,tests]",
    "black",
    "ipython",
    "pre-commit>=2.21,<4.0",
    "ruff",
]
loaders = ["chardet>=5.1.0", "aiofiles>=23.1.0"]
prefect = ["prefect>=2.11.0"]
slackbot = ["cachetools>=5.3.1", "numpy>=1.21.2", "duckduckgo_search>=3.8.3"]

[project.urls]
Code = "https://github.com/prefecthq/marvin-recipes"
Documentation = "https://github.com/prefecthq/marvin-recipes"


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# black configuration
[tool.black]
preview = true

# ruff configuration
[tool.ruff]
extend-select = ["I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ['I', 'F401', 'E402']
"conftest.py" = ["F401", "F403"]
'tests/fixtures/*.py' = ['F403']